# GuardRailWonder

./: .env.example  .gitignore  CENTROID_GUARDRAIL.md  DEPLOYMENT.md  DESIGN.md  README.md  Test_plan.md  app.py  mcp_server.py  pyproject.toml  requirements.txt  setup_credentials.py  test_api_detailed.py  test_api_simple.py  test_gemini.py  test_no_proxy.py  tune.py
config/: analysis_prompt.txt  config.json  improved_attachment_prompts.txt  intent_paraphrases.json  predefined_prompts.json  sample_prompts.txt
data/: dev_data.jsonl
examples/: analyze_logs.py  basic_usage.py  centroid_usage.py  mcp_usage.py
notebooks/: experiment_multiple_attachments.ipynb  ragas_eval.ipynb
src/guardrails/: __init__.py  centroid_guardrail.py  core.py  embeddings.py  mcp_tool.py  models.py  utils.py
tests/: __init__.py  quick_test.py  test_centroid_guardrail.py  test_core.py  test_embeddings.py  test_mcp_tool.py
